fixed a bug that breaks the game after a certain length of playing

--- a/src/Canvas.css
+++ b/src/Canvas.css
@@ -7,7 +7,7 @@ body {
 }
 
 canvas {
-  opacity: 100%;
+  /* opacity: 100%; */
   width: 100%;
   height: 350px;
   border: 1px solid transparent;
